BEGIN;

CREATE TYPE event_type AS ENUM (
    'unique_event',
    'recurring_event'
);

CREATE TYPE event_exception_type AS ENUM (
    'modified',
    'cancelled'
);

CREATE TYPE custom_field_override_operation AS ENUM (
    'set',
    'remove'
);

CREATE TYPE invitation_status AS ENUM (
    'pending',
    'accepted',
    'declined',
    'revoked',
    'expired'
);

CREATE TYPE organization_membership_role AS ENUM (
    'admin',
    'member'
);

CREATE TABLE users (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    auth_provider_id text NOT NULL UNIQUE,
    email text NOT NULL UNIQUE,

    first_name varchar(100),
    last_name varchar(100),
    username varchar(50) UNIQUE,

    preferences jsonb NOT NULL DEFAULT '{}'::jsonb,

    created_at timestamptz NOT NULL,
    updated_at timestamptz NOT NULL,
    last_seen_at timestamptz
);

CREATE TABLE organizations (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    name varchar(100) NOT NULL,
    description text,

    created_by_user_id bigint NOT NULL REFERENCES users(id),

    settings jsonb NOT NULL DEFAULT '{}'::jsonb,

    created_at timestamptz NOT NULL,
    updated_at timestamptz NOT NULL
);

CREATE TABLE organization_memberships (
    organization_id bigint NOT NULL REFERENCES organizations(id),
    user_id bigint NOT NULL REFERENCES users(id),

    role organization_membership_role NOT NULL DEFAULT 'member',

    created_at timestamptz NOT NULL,
    invited_by_user_id bigint NOT NULL REFERENCES users(id),

    PRIMARY KEY (organization_id, user_id)
);

CREATE INDEX ix_organization_memberships_user_id
    ON organization_memberships (user_id);

CREATE TABLE schedules (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    organization_id bigint NOT NULL REFERENCES organizations(id),

    name varchar(100) NOT NULL,
    description text,

    settings jsonb NOT NULL DEFAULT '{}'::jsonb,

    created_at timestamptz NOT NULL,
    updated_at timestamptz NOT NULL
);

CREATE INDEX ix_schedules_organization_id
    ON schedules (organization_id);

CREATE TABLE activities (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    organization_id bigint NOT NULL REFERENCES organizations(id),

    title text NOT NULL,
    description text,

    created_at timestamptz NOT NULL,
    updated_at timestamptz NOT NULL
);

CREATE INDEX ix_activities_organization_id
    ON activities (organization_id);

CREATE TABLE events (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    schedule_id bigint NOT NULL REFERENCES schedules(id),

    -- Nullable by design: deleting an Activity detaches its Events.
    source_activity_id bigint REFERENCES activities(id) ON DELETE SET NULL,

    type event_type NOT NULL,

    title text NOT NULL,
    description text,

    starts_at timestamptz,
    ends_at timestamptz,

    occurrence_starts_at_local timestamp,
    occurrence_ends_at_local timestamp,
    recurrence_timezone text,
    recurrence_rule jsonb,

    created_at timestamptz NOT NULL,
    updated_at timestamptz NOT NULL,

    CONSTRAINT ck_events_temporal_shape CHECK (
        (
            type = 'unique_event'
            AND starts_at IS NOT NULL
            AND ends_at IS NOT NULL
            AND ends_at > starts_at
            AND occurrence_starts_at_local IS NULL
            AND occurrence_ends_at_local IS NULL
            AND recurrence_timezone IS NULL
            AND recurrence_rule IS NULL
        )
        OR
        (
            type = 'recurring_event'
            AND starts_at IS NULL
            AND ends_at IS NULL
            AND occurrence_starts_at_local IS NOT NULL
            AND occurrence_ends_at_local IS NOT NULL
            AND occurrence_ends_at_local > occurrence_starts_at_local
            AND recurrence_timezone IS NOT NULL
            AND btrim(recurrence_timezone) <> ''
            AND recurrence_rule IS NOT NULL
        )
    )
);

CREATE INDEX ix_events_schedule_id
    ON events (schedule_id);

CREATE INDEX ix_events_schedule_id_starts_at
    ON events (schedule_id, starts_at);

CREATE INDEX ix_events_source_activity_id
    ON events (source_activity_id);

CREATE TABLE event_exceptions (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    event_id bigint NOT NULL REFERENCES events(id),

    original_occurrence_local timestamp NOT NULL,
    type event_exception_type NOT NULL,

    replacement_starts_at_local timestamp,
    replacement_ends_at_local timestamp,

    replacement_title text,
    replacement_description text,

    created_at timestamptz NOT NULL,
    updated_at timestamptz NOT NULL,

    CONSTRAINT uq_event_exceptions_event_occurrence
        UNIQUE (event_id, original_occurrence_local),

    CONSTRAINT ck_event_exceptions_replacement_times CHECK (
        (
            type = 'cancelled'
            AND replacement_starts_at_local IS NULL
            AND replacement_ends_at_local IS NULL
            AND replacement_title IS NULL
            AND replacement_description IS NULL
        )
        OR
        (
            type = 'modified'
            AND (
                (replacement_starts_at_local IS NULL AND replacement_ends_at_local IS NULL)
                OR
                (
                    replacement_starts_at_local IS NOT NULL
                    AND replacement_ends_at_local IS NOT NULL
                    AND replacement_ends_at_local > replacement_starts_at_local
                )
            )
        )
    )
);

CREATE TABLE organization_custom_fields (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    organization_id bigint NOT NULL REFERENCES organizations(id),

    name varchar(100) NOT NULL,
    definition jsonb NOT NULL,

    CONSTRAINT uq_organization_custom_fields_organization_name
        UNIQUE (organization_id, name)
);

CREATE TABLE activities_custom_field_values (
    activity_id bigint NOT NULL REFERENCES activities(id),
    custom_field_id bigint NOT NULL REFERENCES organization_custom_fields(id),

    value jsonb NOT NULL,

    PRIMARY KEY (activity_id, custom_field_id)
);

CREATE TABLE events_custom_field_values (
    event_id bigint NOT NULL REFERENCES events(id),
    custom_field_id bigint NOT NULL REFERENCES organization_custom_fields(id),

    value jsonb NOT NULL,

    PRIMARY KEY (event_id, custom_field_id)
);

CREATE TABLE event_exception_custom_field_overrides (
    event_exception_id bigint NOT NULL REFERENCES event_exceptions(id),
    custom_field_id bigint NOT NULL REFERENCES organization_custom_fields(id),

    operation custom_field_override_operation NOT NULL,
    value jsonb,

    PRIMARY KEY (event_exception_id, custom_field_id),

    CONSTRAINT ck_event_exception_custom_field_override_value CHECK (
        (operation = 'set' AND value IS NOT NULL)
        OR
        (operation = 'remove' AND value IS NULL)
    )
);

CREATE TABLE invitations (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    inviter_id bigint NOT NULL REFERENCES users(id),
    invited_email text NOT NULL,
    organization_id bigint NOT NULL REFERENCES organizations(id),

    status invitation_status NOT NULL DEFAULT 'pending',

    created_at timestamptz NOT NULL,
    accepted_at timestamptz,
    declined_at timestamptz,

    CONSTRAINT uq_invitations_organization_email
        UNIQUE (organization_id, invited_email)
);

COMMIT;
